Fixing the alignmnet of the checkboxes

--- a/client/app/controllers/create/create.less
+++ b/client/app/controllers/create/create.less
@@ -298,6 +298,7 @@
   }
   .inputLabel {
     margin: 10px;
+    overflow: hidden;
     label {
       font-weight: normal;
       margin-bottom: 8px;
